--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">\
     <meta name="viewport" content="width=device-width, initial-scale=1.0">\
     <title>Theatre Ticket Reservation</title>\
-    <link rel="stylesheet" href="styles.css">\
+    <link rel='stylesheet' href='styles.css' type='text' />
 </head>\
 <body>\
     <!-- Header Section -->\
