--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>\
         <div class="container">\
             <div class="logo">\
-                <a href="#">TheatreName</a>\
+                <a href="#">Raffles Theatre</a>\
             </div>\
             <nav>\
                 <ul class="nav-links">\
@@ -32,7 +32,7 @@
     <!-- Hero Section -->\
     <section class="hero">\
         <div class="hero-content">\
-            <h1>Experience the Magic of Live Theatre</h1>\
+            <h1>Experience the Magic of Live We Will Rock You The Musical</h1>\
             <p>Discover world-class performances, from drama to dance</p>\
             <a href="#" class="btn book-btn">Book Tickets Now</a>\
         </div>\
@@ -46,8 +46,8 @@
                 <!-- Sample Show Item -->\
                 <div class="show-item">\
                     <img src="show1.jpg" alt="Show 1">\
-                    <h3>Show Title 1</h3>\
-                    <p>Date: August 20, 2024</p>\
+                    <h3>We Will Rock You</h3>\
+                    <p>Date: November 26-28, 2024</p>\
                     <a href="#" class="btn">Buy Tickets</a>\
                 </div>\
                 <!-- Add more show items as needed -->\
@@ -58,7 +58,7 @@
     <!-- Footer Section -->\
     <footer>\
         <div class="container">\
-            <p>&copy; 2024 TheatreName. All rights reserved.</p>\
+            <p>&copy; 2024 Raffles Theatre. All rights reserved.</p>\
             <ul class="footer-links">\
                 <li><a href="#">Privacy Policy</a></li>\
                 <li><a href="#">Terms & Conditions</a></li>\
